# coactor

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: ci.yml  codeql.yml
docs/: coactor.drawio
include/: coactor.hpp
include/coactor/: actor.hpp  concurrent_queue.hpp  inbox.hpp  message.hpp  result.hpp  stage.hpp
src/: CMakeLists.txt  actor.cpp  actor.hpp  actortest.cpp  coactor.hpp  conctest.cpp  concurrent_queue.hpp  cotest.cpp  oldactortest.cpp  reactive-co.cpp  stage.cpp  stage.hpp
src/coactor/: CMakeLists.txt  actor.cpp  concurrent_queue.cpp  inbox.cpp  message.cpp  stage.cpp
src/experiments/: CMakeLists.txt  database_server.cpp  database_server2.cpp
